--- a/examples/simple/views/layout.jade
+++ b/examples/simple/views/layout.jade
@@ -1,7 +1,7 @@
 !!! 5
 html(lang="en")
   head
-    !{bundleJavascript}
+    !{renderScriptTags()}
   body
     h1 Really Express
     #container !{body}
