Rename to node-piles. Add support for namespaces and css.

--- a/examples/simple/views/layout.jade
+++ b/examples/simple/views/layout.jade
@@ -1,7 +1,8 @@
 !!! 5
 html(lang="en")
   head
-    !{renderScriptTags()}
+    !{renderStyleTags()}
   body
     h1 Really Express
     #container !{body}
+    !{renderScriptTags("foo")}
