Add addRaw. Respect asset order in everything except in urls.

--- a/spec/testapp/stylesheets/style.styl
+++ b/spec/testapp/stylesheets/style.styl
@@ -1,11 +1,9 @@
 @import 'nib'
 
-*
-  color yellow
-
-h2
+h1
   color green
   background-color blue
   border-radius 5px
 
-
+#stylus
+  display none
