--- a/spec/testapp/views/index.jade
+++ b/spec/testapp/views/index.jade
@@ -1,4 +1,6 @@
-#nocss foo
-#plain foo
-#stylus foo
-#less foo
+h2 Failed CSS tests:
+#tests
+  #plain Adding plain css files is broken
+  #stylus Adding Stylus is broken
+  #less Adding LESS  is broken
+  #raw Adding CSS strings  is broken
