--- a/spec/testapp/views/layout.jade
+++ b/spec/testapp/views/layout.jade
@@ -2,6 +2,7 @@
 html(lang="en")
   head
     !{renderStyleTags()}
+    style #tests * { color: red }
   body
     h1 node-piles test page
     #container !{body}
