--- a/examples/simple/views/layout.jade
+++ b/examples/simple/views/layout.jade
@@ -3,6 +3,6 @@ html(lang="en")
   head
     !{renderStyleTags()}
   body
-    h1 Really Express
+    h1 node-pile
     #container !{body}
     !{renderScriptTags("foo")}
