add test for broken css namespaces

--- a/spec/testapp/views/index.jade
+++ b/spec/testapp/views/index.jade
@@ -4,3 +4,4 @@ h2 Failed CSS tests:
   #stylus Adding Stylus is broken
   #less Adding LESS  is broken
   #raw Adding CSS strings  is broken
+  #namespaced Adding namespaced CSS files is broken
