--- a/spec/testapp/views/layout.jade
+++ b/spec/testapp/views/layout.jade
@@ -6,4 +6,4 @@ html(lang="en")
   body
     h1 node-piles test page
     #container !{body}
-    !{renderScriptTags()}
+    !{renderScriptTags("namespaced")}
