Update test page title

--- a/spec/testapp/views/layout.jade
+++ b/spec/testapp/views/layout.jade
@@ -4,6 +4,6 @@ html(lang="en")
     !{renderStyleTags("namespaced")}
     style #tests * { color: red }
   body
-    h1 node-piles test page
+    h1 Piler test page
     #container !{body}
     !{renderScriptTags()}
