Add a visual test for Stylus imports

--- a/spec/testapp/views/index.jade
+++ b/spec/testapp/views/index.jade
@@ -5,3 +5,4 @@ h2 Failed CSS tests:
   #less Adding LESS  is broken
   #raw Adding CSS strings  is broken
   #namespaced Adding namespaced CSS files is broken
+  #stylys_import Can import stylys styles
