--- a/spec/testapp/views/index.jade
+++ b/spec/testapp/views/index.jade
@@ -6,3 +6,6 @@ h2 Failed CSS tests:
   #raw Adding CSS strings  is broken
   #namespaced Adding namespaced CSS files is broken
   #stylys_import Can import stylys styles
+  #less_import Can import less styles
+
+small (all ok if there is nothing visible above)
