--- a/spec/testapp/views/layout.jade
+++ b/spec/testapp/views/layout.jade
@@ -1,9 +1,9 @@
 !!! 5
 html(lang="en")
   head
-    !{renderStyleTags("namespaced")}
+    !{css}
     style #tests * { color: red }
   body
     h1 Piler test page
     #container !{body}
-    !{renderScriptTags()}
+    !{js}
