preparing for version 0.6.0, failing tests

--- a/test/testapp/views/layout.jade
+++ b/test/testapp/views/layout.jade
@@ -1,9 +1,9 @@
-!!! 5
+doctype html
 html(lang="en")
   head
-    !{css}
+    != css
     style #tests * { color: red }
   body
     h1 Piler test page
-    #container !{body}
-    !{js}
+    #container != body
+    != js
