--- a/test/testapp/views/layout.jade
+++ b/test/testapp/views/layout.jade
@@ -5,5 +5,6 @@ html(lang="en")
     style #tests * { color: red }
   body
     h1 Piler test page
-    #container != body
+    #container
+      block body
     != js
