--- a/examples/logger/views/index.jade
+++ b/examples/logger/views/index.jade
@@ -1,8 +1,8 @@
-!!! 5
+doctype html
 html(lang="en")
   head
-    !{css}
-    !{js}
+    != css
+    != js
   body
     h1 Piler Example
     p View the source :)
