--- a/examples/views/index.jade
+++ b/examples/views/index.jade
@@ -2,8 +2,10 @@ doctype html
 html(lang="en")
   head
     != css
-    != js
   body
     h1 Piler Example
     h2 foo h2
     p View the source :)
+
+    != html
+    != js
